Solved the cors issue and other functions issue

--- a/frontend/frontend/index.html
+++ b/frontend/frontend/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <script
+    <!-- <script
       defer
       data-website-id="67977a0b6ccd4d96cf28fcf5"
       data-domain="http://localhost:5173/"
       website-name="web-analytics"
       src="http://localhost:3000/js/tracker.js"
-    ></script>
+    ></script> -->
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
