--- a/frontend/frontend/index.html
+++ b/frontend/frontend/index.html
@@ -9,7 +9,7 @@
       src="http://localhost:3000/js/tracker.js"
     ></script> -->
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/logo4.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WebMeter</title>
   </head>
