--- a/frontend/frontend/index.html
+++ b/frontend/frontend/index.html
@@ -8,6 +8,10 @@
       website-name="web-analytics"
       src="http://localhost:3000/js/tracker.js"
     ></script> -->
+
+    <!-- <script src="https://sdk.cashfree.com/js/v3/cashfree.js"></script> -->
+    <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
+
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/logo4.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -16,5 +20,10 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <!-- <script>
+      const cashfree = Cashfree({
+        mode: "sandbox",
+      });
+    </script> -->
   </body>
 </html>
