feat: implement payment gateway fixes

--- a/frontend/frontend/index.html
+++ b/frontend/frontend/index.html
@@ -9,9 +9,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>WebMeter</title>
 
-  <script type="module" data-website-id="685517b9b0bd05a725505a4a" data-domain="https://www.webmeter.in/"
+  <!-- <script type="module" data-website-id="685517b9b0bd05a725505a4a" data-domain="https://www.webmeter.in/"
     website-name="webmeter" src="https://backend.webmeter.in/js/tracker.js">
-    </script>
+    </script> -->
 </head>
 
 <body>
