--- a/frontend/frontend/index.html
+++ b/frontend/frontend/index.html
@@ -9,14 +9,20 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>WebMeter</title>
 
-  <!-- <script type="module" data-website-id="685517b9b0bd05a725505a4a" data-domain="https://www.webmeter.in/"
-    website-name="webmeter" src="https://backend.webmeter.in/js/tracker.js">
-    </script> -->
+
 </head>
 
 <body>
   <div id="root"></div>
   <script type="module" src="/src/main.jsx"></script>
+
+  <script 
+    type="module" 
+    data-website-id="68408880579e82a18f64e4ae" 
+    data-domain="https://www.webmeter.in" 
+    website-name="webmeter" 
+    src="https://backend.webmeter.in/js/tracker.js">
+</script>
 </body>
 
 </html>
