Re-push: Ensure analytics script is present in Vite index.html and deployment is up to date

--- a/frontend/frontend/index.html
+++ b/frontend/frontend/index.html
@@ -1,28 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
+    <script
+      type="module"
+      data-website-id="68408880579e82a18f64e4ae"
+      data-domain="https://www.webmeter.in"
+      website-name="webmeter"
+      src="https://backend.webmeter.in/js/tracker.js"
+    ></script>
 
-  <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/logo4.png" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>WebMeter</title>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/logo4.png" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>WebMeter</title>
+  </head>
 
-
-</head>
-
-<body>
-  <div id="root"></div>
-  <script type="module" src="/src/main.jsx"></script>
-
-  <script 
-    type="module" 
-    data-website-id="68408880579e82a18f64e4ae" 
-    data-domain="https://www.webmeter.in" 
-    website-name="webmeter" 
-    src="https://backend.webmeter.in/js/tracker.js">
-</script>
-</body>
-
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
+  </body>
 </html>
